--- a/src/style.scss
+++ b/src/style.scss
@@ -80,6 +80,7 @@ html {
   letter-spacing: -1px;
   padding: 2rem 0.75rem;
   text-transform: uppercase;
+  border: 1px solid var(--green);
 
   a {
     color: var(--yellow);
@@ -92,32 +93,57 @@ html {
   p {
     font-size: 1.75rem;
     margin-bottom: 3rem;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
 
 form {
-  padding: 0 0.5rem;
+  padding: 2rem 0.5rem;
   display: flex;
   flex-direction: column;
   font-size: 2rem;
+  color: var(--black);
+
+  p {
+    margin: 2rem 0 1rem;
+
+    &:first-of-type {
+      margin-top: 0;
+    }
+  }
 
   button {
     appearance: none;
     -webkit-appearance: button;
     padding: 2rem 1rem;
     border: none;
-    background-color: var(--blue);
+    background-color: var(--red);
     border-radius: 24px;
     font-size: 3rem;
     font-family: "Bungee Outline";
-    color: var(--black);
-    margin: 1rem 0;
+    color: var(--white);
+    margin: 1rem 0.5rem;
+    font-style: normal;
+    transform: skew(-10deg);
+    transition: opacity ease 400ms;
+
+    &:disabled {
+      opacity: 0.5;
+    }
   }
+}
+
+.rsvp-confirm {
+  background-color: var(--green);
 }
 
 .checkbox {
   display: grid;
   margin-bottom: 1rem;
+  padding-left: 1rem;
   width: 100%;
   grid-template-columns: min-content auto;
   grid-gap: 0.5em;
@@ -133,7 +159,7 @@ form {
   display: inline-grid;
   width: 1em;
   height: 1em;
-  border-radius: 0.25em;
+  transform: skew(-10deg);
   border: 0.1em solid currentColor;
 
   svg {
