--- a/src/style.scss
+++ b/src/style.scss
@@ -64,14 +64,13 @@ html {
 }
 
 .hello {
-  font-family: "Bungee Outline", cursive;
+  // font-family: "Bungee Outline", cursive;
   margin-bottom: 2rem;
   text-align: center;
-  font-size: 2rem;
-  padding: 2rem 0.75rem;
-  padding-top: 0;
+  font-size: 3.5rem;
+  padding: 1rem 0.75rem 3rem;
   font-weight: bold;
-  color: var(--black);
+  color: var(--white);
 }
 
 .md {
@@ -93,10 +92,6 @@ html {
   p {
     font-size: 1.75rem;
     margin-bottom: 3rem;
-
-    &:last-of-type {
-      margin-bottom: 0;
-    }
   }
 
   i {
@@ -108,13 +103,14 @@ html {
 }
 
 form {
-  padding: 2rem 0.5rem;
+  padding: 2rem;
   display: flex;
+  background: var(--white);
   flex-direction: column;
   font-size: 2rem;
   color: var(--black);
 
-  p {
+  .container p {
     margin: 2rem 0 1rem;
 
     &:first-of-type {
@@ -205,6 +201,10 @@ form {
   }
 }
 
-.loading {
-  display: none;
+.rsvp {
+  background-color: var(--red);
+  padding: 2rem;
+  p {
+    margin-bottom: 0;
+  }
 }
