--- a/src/style.scss
+++ b/src/style.scss
@@ -64,11 +64,10 @@ html {
 }
 
 .hello {
-  // font-family: "Bungee Outline", cursive;
   margin-bottom: 2rem;
   text-align: center;
-  font-size: 3.5rem;
-  padding: 1rem 0.75rem 3rem;
+  font-size: 3rem;
+  padding: 1rem 0 3rem;
   font-weight: bold;
   color: var(--white);
 }
@@ -103,7 +102,7 @@ html {
 }
 
 form {
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
   background: var(--white);
   flex-direction: column;
@@ -128,11 +127,11 @@ form {
     font-size: 3rem;
     font-family: "Bungee Outline";
     color: var(--white);
-    margin: 1rem 0.5rem;
+    margin: 1rem 0;
     font-style: normal;
     transform: skew(-10deg);
     transition: opacity ease 400ms;
-    width: 95%;
+    width: 100%;
     max-width: 500px;
 
     &:disabled {
@@ -206,5 +205,35 @@ form {
   padding: 2rem;
   p {
     margin-bottom: 0;
+  }
+}
+
+.qr-container {
+  width: 216mm;
+  margin: 0 auto;
+  display: grid;
+  padding: 16mm 17.5mm;
+  grid-template-columns: repeat(4, 40mm);
+  grid-template-rows: repeat(6, 40mm);
+  gap: 7mm;
+
+  > div {
+    border-radius: 1.5mm;
+    border: 1px solid black;
+    overflow: hidden;
+    width: 40mm;
+    height: 40mm;
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 2mm;
+
+    canvas {
+      width: 30mm;
+      height: 30mm;
+    }
+
+    p {
+      font-size: 0.5rem;
+    }
   }
 }
